preparation for JDK11
This branch at least compiles, builds and runs successfully using JDK11.