@@ -1,3 +1,3 @@
 #!/usr/bin/env bash
 
-java -cp "../lib/*:../drivers/*" cruft.wtf.gimlet.GimletApp $@
+java -cp "../lib/*:../drivers/*" --module-path="../lib" --add-modules=javafx.controls cruft.wtf.gimlet.GimletApp $@
